[gd_scene load_steps=2 format=3 uid="uid://bvq8xkj2n3y8r"]

[ext_resource type="Script" path="res://src/ui_new/components/UpgradeCard.gd" id="1_x8k2v"]

[node name="UpgradeCard" type="PanelContainer"]
custom_minimum_size = Vector2(0, 120)
script = ExtResource("1_x8k2v")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
expand_mode = 1
stretch_mode = 5

[node name="UpgradeInfo" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/UpgradeInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Upgrade Name"

[node name="Description" type="Label" parent="MarginContainer/HBoxContainer/UpgradeInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Upgrade description"
autowrap_mode = 3

[node name="ProgressContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/UpgradeInfo"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/UpgradeInfo/ProgressContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 10.0
step = 1.0
show_percentage = false

[node name="LevelLabel" type="Label" parent="MarginContainer/HBoxContainer/UpgradeInfo/ProgressContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "0/10"

[node name="EffectLabel" type="Label" parent="MarginContainer/HBoxContainer/UpgradeInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.7, 0.9, 0.7, 1)
text = "Effect: +10% value"

[node name="ButtonsContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="BuyButton" type="Button" parent="MarginContainer/HBoxContainer/ButtonsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 40)
text = "COMPRAR"

[node name="InfoButton" type="Button" parent="MarginContainer/HBoxContainer/ButtonsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 30)
theme_override_font_sizes/font_size = 12
text = "INFO"